--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,13 +35,13 @@ header a {
 /* homepage */
 .home {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 3fr 2fr;
   gap: 100px;
 }
 .workout-details {
   background: #fff;
   border-radius: 4px;
-  margin: 20px auto;
+  margin: 20px 10px;
   padding: 20px;
   position: relative;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
@@ -97,6 +97,7 @@ div.error {
   border-radius: 4px;
   margin: 20px 0;
 }
+
 input.error {
-  border: 1px solid var(--error);
+  border: 1px solid var(--error)
 }
